<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="#6B169E"
            app:expandedTitleMarginTop="8dp"
            app:expandedTitleTextAppearance="@style/CollapseTextStyle"
            app:collapsedTitleTextAppearance="@style/CollapseTextStyle"
            app:expandedTitleGravity="center_horizontal|top"
            android:transitionName="@string/transition_string"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:id="@+id/overlay"
                android:scaleType="centerCrop"
                android:src="@drawable/event_head_overlay_vector"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:translationZ="-0.1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/event_head"
                app:layout_collapseMode="parallax" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="48dp"
                android:transitionName="@string/transition_string_text"
                app:layout_collapseMode="pin"
                app:title="Test"

                />


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="bottom"
                android:elevation="2dp"
                android:background="@color/regBG"/>

            <android.support.design.widget.TabLayout
                android:id="@+id/tab"
                android:alpha="0"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/tabBGColor"
                app:tabIndicatorColor="@android:color/white"
                app:layout_collapseMode="pin"
                android:elevation="3dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="3dp"
                app:tabRippleColor="@android:color/white"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@android:color/white" />


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        android:paddingTop="16dp"
        android:alpha="0"
        android:background="@drawable/bg_vector"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/event_registration_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardVerticalMargin"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/cardColor">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/event_registration_title"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardVerticalMargin"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/cardColor">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/placeholder"
                        android:textSize="@dimen/cardTextSize"
                        android:textColor="@color/cardTextColor" />

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardVerticalMargin"
                        android:layout_weight="1"
                        app:cardElevation="8dp"
                        app:cardBackgroundColor="@color/cardColor"
                        app:cardCornerRadius="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="16dp"
                            android:text="Fees: $300"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardVerticalMargin"
                        android:layout_weight="1"
                        app:cardElevation="8dp"
                        app:cardBackgroundColor="@color/cardColor"
                        app:cardCornerRadius="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="16dp"
                            android:maxLines="1"
                            android:text="Status: closed"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </android.support.v7.widget.CardView>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/event_description_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardVerticalMargin"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/cardColor"
                    app:cardCornerRadius="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/event_description_title"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardVerticalMargin"
                    android:id="@+id/description_card"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/cardColor"
                    app:cardCornerRadius="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/description_text_view"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="16dp"
                            android:text="@string/placeholder_long"
                            android:ellipsize="end"
                            android:textColor="@android:color/white"
                            android:maxLines="2"
                            android:textSize="@dimen/cardTextSize" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_show_more"
                            android:layout_marginBottom="8dp"
                            android:id="@+id/show_more"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/titleTextColor"
                            android:layout_gravity="end"/>
                    </LinearLayout>



                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardVerticalMargin"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/cardColor"
                    app:cardCornerRadius="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/cardTextSize"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardVerticalMargin"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/cardColor"
                    app:cardCornerRadius="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/cardTextSize"/>

                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

